--- a/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
+++ b/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,24 +31,24 @@
      "text": [
       "NOTE: 'Public' is now the active caslib.\n",
       "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.000343 seconds\n",
-      "NOTE:       cpu time                0.000320 seconds (93.29%)\n",
+      "NOTE:       real time               0.000280 seconds\n",
+      "NOTE:       cpu time                0.000257 seconds (91.79%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            125.75G\n",
-      "NOTE:       memory                  262.06K (0.00%)\n"
+      "NOTE:       memory                  265.19K (0.00%)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000343s</span> &#183; <span class=\"cas-user\">user 0.00032s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00028s</span> &#183; <span class=\"cas-user\">user 0.000162s</span> &#183; <span class=\"cas-sys\">sys 9.5e-05s</span> &#183; <span class=\"cas-memory\">mem 0.259MB</span></small></p>"
       ],
       "text/plain": [
-       "+ Elapsed: 0.000343s, user: 0.00032s, mem: 0.256mb"
+       "+ Elapsed: 0.00028s, user: 0.000162s, sys: 9.5e-05s, mem: 0.259mb"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,8 +289,8 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'decisionTree'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.388797 seconds\n",
-      "NOTE:       cpu time                0.003758 seconds (0.97%)\n",
+      "NOTE:       real time               0.002008 seconds\n",
+      "NOTE:       cpu time                0.001985 seconds (98.85%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            125.75G\n",
       "NOTE:       memory                  226.94K (0.00%)\n"
@@ -304,17 +304,17 @@
        "<div>decisionTree</div>\n",
        "</div>\n",
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.389s</span> &#183; <span class=\"cas-user\">user 0.00323s</span> &#183; <span class=\"cas-sys\">sys 0.000533s</span> &#183; <span class=\"cas-memory\">mem 0.222MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00201s</span> &#183; <span class=\"cas-user\">user 0.000961s</span> &#183; <span class=\"cas-sys\">sys 0.00102s</span> &#183; <span class=\"cas-memory\">mem 0.222MB</span></small></p>"
       ],
       "text/plain": [
        "[actionset]\n",
        "\n",
        " 'decisionTree'\n",
        "\n",
-       "+ Elapsed: 0.389s, user: 0.00323s, sys: 0.000533s, mem: 0.222mb"
+       "+ Elapsed: 0.00201s, user: 0.000961s, sys: 0.00102s, mem: 0.222mb"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +333,13 @@
      "output_type": "stream",
      "text": [
       "NOTE: Executing action 'decisionTree.gbtreeTrain'.\n",
-      "NOTE: 932467 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
+      "NOTE: 937115 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.gbtreeTrain' used (Total process time):\n",
-      "NOTE:       real time               0.684806 seconds\n",
-      "NOTE:       cpu time                0.458381 seconds (66.94%)\n",
+      "NOTE:       real time               0.405143 seconds\n",
+      "NOTE:       cpu time                0.483555 seconds (119.35%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            125.75G\n",
-      "NOTE:       memory                  64.72M (0.05%)\n"
+      "NOTE:       memory                  64.71M (0.05%)\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,11 +372,11 @@
       "NOTE: Executing action 'decisionTree.forestTrain'.\n",
       "NOTE: 12834419 bytes were written to the table \"forest_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.forestTrain' used (Total process time):\n",
-      "NOTE:       real time               0.835494 seconds\n",
-      "NOTE:       cpu time                3.665504 seconds (438.72%)\n",
+      "NOTE:       real time               1.104126 seconds\n",
+      "NOTE:       cpu time                3.703290 seconds (335.40%)\n",
       "NOTE:       total nodes             1 (16 cores)\n",
       "NOTE:       total memory            125.75G\n",
-      "NOTE:       memory                  170.60M (0.13%)\n"
+      "NOTE:       memory                  170.62M (0.13%)\n"
      ]
     }
    ],
