--- a/R_snippets/R_Kmeans_simple_clustering.ipynb
+++ b/R_snippets/R_Kmeans_simple_clustering.ipynb
@@ -50,49 +50,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NOTE: Connecting to CAS and generating CAS action functions for loaded\n",
-      "      action sets...\n",
-      "NOTE: To generate the functions with signatures (for tab completion), set \n",
-      "      options(cas.gen.function.sig=TRUE).\n",
-      "NOTE: Added action set 'fedSql'.\n",
-      "NOTE: Information for action set 'fedSql':\n",
-      "NOTE:    fedSql\n",
-      "NOTE:       execDirect - Submits a SAS FedSQL language statement for immediate execution\n",
-      "NOTE: Added action set 'clustering'.\n",
-      "NOTE: Information for action set 'clustering':\n",
-      "NOTE:    clustering\n",
-      "NOTE:       kClus - Provides k-means clustering\n",
-      "NOTE: Added action set 'datastep'.\n",
-      "NOTE: Information for action set 'dataStep':\n",
-      "NOTE:    dataStep\n",
-      "NOTE:       runCodeTable - Runs DATA step code stored in a CAS table\n",
-      "NOTE:       runCode - Runs DATA step code\n",
-      "NOTE: 'CASUSER(viyademo01)' is now the active caslib.\n"
+      "[1] \"ERROR: Kerberos initialization failed. Your credential cache is either expired or missing.\"\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<ol>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate}\n",
-       "\\end{enumerate}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "list()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in reg.finalizer(ans@ref, delete_SW_CASConnection): trying to get slot \"ref\" from an object of a basic class (\"NULL\") with no slots\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in reg.finalizer(ans@ref, delete_SW_CASConnection): trying to get slot \"ref\" from an object of a basic class (\"NULL\") with no slots\nTraceback:\n",
+      "1. CAS(\"frasepviya35smp.cloud.com\", 5570)",
+      "2. new(structure(\"CAS\", package = \"swat\"), ...)",
+      "3. initialize(value, ...)",
+      "4. initialize(value, ...)",
+      "5. .Object$initialize(...)",
+      "6. CASConnection(.self$hostname, .self$port, .self$username, password, \n .     soptions, sw_error)",
+      "7. reg.finalizer(ans@ref, delete_SW_CASConnection)"
+     ]
     }
    ],
    "source": [
